test/test_1.out
Error type 21 at Line 4: only int variables can do boolean operations
