test/test_1.spl
int var_1;

int fun(char arg_1) {
    if (arg_1 == 'c') {
        return 1;
    } else {
        return 0;
    }
}

int mian() {
    float var_2;
    char var_3;
    struct S_1 {
        int attr_1, attr_2;
    } s[2];
    s[0].attr_1 = 3;
    s[0].attr_2 = 4;
    var_1 = s[1].attr_1 + s[1].attr_2;
    s[1].attr_1 = var_1;
    var_3 = 'c';
    s[1].attr_2 = var_1 + fun(var_3);
    return 1;
}
